# streamlit-template

./: .gitignore  README.md  app.py  pyproject.toml
.github/: CODEOWNERS
